# serializer version: 1
# name: test_every_sensor_matches_its_snapshot[sensor.example_premise_cycle_to_date_cost-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.example_premise_cycle_to_date_cost',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Cycle-to-date cost',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': None,
    'original_name': 'Cycle-to-date cost',
    'platform': 'nisc_smarthub',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cycle_cost',
    'unique_id': '900000001_70001_cycle_cost',
    'unit_of_measurement': 'USD',
  })
# ---
# name: test_every_sensor_matches_its_snapshot[sensor.example_premise_cycle_to_date_cost-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'adjustment': 0.0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'monetary',
      'energy': 15.5128,
      'fixed': 3.1935,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Example Premise Cycle-to-date cost',
      'priced_hours': 72,
      'residual': 0.0,
      'rider': 0.0,
      'tax': 1.4497,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'USD',
      'unpriced_hours': 0,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.example_premise_cycle_to_date_cost',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20.1560365120968',
  })
# ---
# name: test_every_sensor_matches_its_snapshot[sensor.example_premise_cycle_to_date_usage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.example_premise_cycle_to_date_usage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Cycle-to-date usage',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': None,
    'original_name': 'Cycle-to-date usage',
    'platform': 'nisc_smarthub',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cycle_usage',
    'unique_id': '900000001_70001_cycle_usage',
    'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
  })
# ---
# name: test_every_sensor_matches_its_snapshot[sensor.example_premise_cycle_to_date_usage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'energy',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Example Premise Cycle-to-date usage',
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.example_premise_cycle_to_date_usage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '157.55',
  })
# ---
# name: test_every_sensor_matches_its_snapshot[sensor.example_premise_last_poll-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.example_premise_last_poll',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Last poll',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Last poll',
    'platform': 'nisc_smarthub',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'last_poll',
    'unique_id': '900000001_70001_last_poll',
    'unit_of_measurement': None,
  })
# ---
# name: test_every_sensor_matches_its_snapshot[sensor.example_premise_last_poll-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'timestamp',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Example Premise Last poll',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.example_premise_last_poll',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2026-09-04T12:00:00+00:00',
  })
# ---
# name: test_every_sensor_matches_its_snapshot[sensor.example_premise_newest_data_hour-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.example_premise_newest_data_hour',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Newest data hour',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Newest data hour',
    'platform': 'nisc_smarthub',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'newest_data_hour',
    'unique_id': '900000001_70001_newest_data_hour',
    'unit_of_measurement': None,
  })
# ---
# name: test_every_sensor_matches_its_snapshot[sensor.example_premise_newest_data_hour-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'timestamp',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Example Premise Newest data hour',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.example_premise_newest_data_hour',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2026-09-04T03:00:00+00:00',
  })
# ---
# name: test_every_sensor_matches_its_snapshot[sensor.example_premise_super_off_peak_allowance_remaining-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.example_premise_super_off_peak_allowance_remaining',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Super off-peak allowance remaining',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': None,
    'original_name': 'Super off-peak allowance remaining',
    'platform': 'nisc_smarthub',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'allowance_remaining_super_off_peak',
    'unique_id': '900000001_70001_allowance_remaining_super_off_peak',
    'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
  })
# ---
# name: test_every_sensor_matches_its_snapshot[sensor.example_premise_super_off_peak_allowance_remaining-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'energy',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Example Premise Super off-peak allowance remaining',
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.example_premise_super_off_peak_allowance_remaining',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '379.39',
  })
# ---
